Introduce an intermediary container for easier TCP connections